--- a/GG.Data/packages.config
+++ b/GG.Data/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="4.2.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="FluentValidation" version="6.2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
