--- a/GG/packages.config
+++ b/GG/packages.config
@@ -8,6 +8,8 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net45" />
+  <package id="FluentValidation" version="6.2.1.0" targetFramework="net45" />
+  <package id="FluentValidation.WebApi" version="6.2.1.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net45" />
